src/components/modal/styles.module.css
.container {
    width: 720px;
    top: 50%;
    left: 50%;
    position: fixed;
    transform: translate(-50%, -50%);
    background-color: rgba(28, 28, 33, 1);
    border-radius: 40px;
    display: flex;
    flex-direction: column;
    z-index: 100;
}

.modal-heading {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 64px;
}

.title {
    margin: 0;
}

.content {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 40px;
}

.close-icon {
    cursor: pointer;
}

